# logging

./: LICENSE  README.md  meson.build
include/logging/: log.h  logger.h  manager.h  record.h
include/logging/formatters/: formatter.h  text.h
include/logging/sinks/: cerr.h  cout.h  file.h  sink.h
src/: level.cpp  log.cpp  logger.cpp  manager.cpp
src/formatters/: text.cpp
src/sinks/: cerr.cpp  cout.cpp  file.cpp  sink.cpp
test/: logging.cpp
